Downcase database name
Testing to see if this works with Travis CI. Previously it could
not find the database even if it was configured in the .travis.yml
file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ rvm:
 
   - 2.1.5
 before_script:
-  - psql -c 'create database Group_Project_test;' -U postgres
+  - psql -c 'create database group_project_test;' -U postgres
